Make simplest possible test with submission of NOP (working)